# incubator-quickstep

./: .gitignore  .gitmodules  CMakeLists.txt
cli/: CMakeLists.txt  QuickstepCli.cpp
query_execution/: ActivePipelinesManager.hpp  CMakeLists.txt  DAGAnalyzer.cpp  DAGAnalyzer.hpp  ExecutionStats.hpp  ForemanBase.hpp  ForemanSingleNode.cpp  ForemanSingleNode.hpp  IntraQuerySchedulingStrategy.hpp  LargestRemainingWorkFirstStrategy.cpp  LargestRemainingWorkFirstStrategy.hpp  Learner.hpp  Pipeline.hpp  PipelineScheduling.cpp  PipelineScheduling.hpp  PolicyEnforcerBase.cpp  PolicyEnforcerBase.hpp  PolicyEnforcerSingleNode.cpp  PolicyEnforcerSingleNode.hpp  QueryExecutionMessages.proto  QueryExecutionTypedefs.hpp  QueryManagerBase.cpp  QueryManagerBase.hpp  QueryManagerSingleNode.cpp  QueryManagerSingleNode.hpp  RandomOperatorStrategy.hpp  ShortestRemainingWorkFirstStrategy.cpp  ShortestRemainingWorkFirstStrategy.hpp  TopologicalSortStaticOrderStrategy.hpp  WeightedRandomWorkOrderStrategy.hpp  WorkOrderSelectionPolicy.hpp  WorkOrdersContainer.cpp  WorkOrdersContainer.hpp  Worker.cpp  Worker.hpp
query_execution/intra_pipeline_scheduling/: CMakeLists.txt  FIFO.hpp  IntraPipelineScheduling.hpp  IntraPipelineSchedulingModule.hpp  LIFO.hpp  Random.hpp
query_execution/tests/: DAGAnalyzer_unittest.cpp  Learner_unittest.cpp  MockOperator.hpp  QueryManagerSingleNode_unittest.cpp
query_optimizer/: CMakeLists.txt  ExecutionGenerator.cpp  QueryHandle.hpp
query_optimizer/cost_model/: CMakeLists.txt  SimpleCostModel.cpp
query_optimizer/tests/: DistributedExecutionGeneratorTestRunner.cpp
relational_operators/: RelationalOperator.hpp  SortRunGenerationOperator.cpp  SortRunGenerationOperator.hpp
storage/: CMakeLists.txt  CountedReference.hpp  EvictionPolicy.cpp  HashTable.proto  HashTableFactory.hpp  InsertDestination.cpp  InsertDestination.hpp  LinearOpenAddressingHashTable.hpp  SeparateChainingHashTable.hpp  SimpleScalarSeparateChainingHashTable.hpp  StorageConstants.hpp  StorageManager.cpp
storage/tests/: HashTable_unittest_common.hpp
threading/: ThreadIDBasedMap.hpp
transaction/: CMakeLists.txt  ConcurrencyControl.hpp  DatabaseLockConcurrencyControl.hpp  Transaction.hpp
utility/: BitVector.hpp  CMakeLists.txt  DAG.hpp  ExecutionDAGVisualizer.cpp  ExecutionDAGVisualizer.hpp  ShardedLockManager.hpp  VectorUtil.hpp
